# Ares

./: CMakeLists.txt  main.cpp
examples/: fact.ares
src/: fileManager.cpp  fileManager.h  myHeaders.h  stupid.h  utils.h
src/AST/: ASTCodeGen.cpp  Node.cpp  Node.h  Parser.cpp  Parser.h
src/Ares/: Ares.cpp  Ares.h
src/CodeGen/: CodeGen.cpp  CodeGen.h
src/Datatypes/: DTT.cpp  DTT.h
src/ErrorHandling/: ErrorHandler.cpp  ErrorHandler.h
src/Lexer/: Lexer.cpp  Lexer.h
src/Logging/: Logger.cpp  Logger.h
src/Tokens/: Token.cpp  Token.h
src/temp_testing/: test_compile_tokens_to_asm.h
